--- a/MyApp/Views/Home/Login.cshtml
+++ b/MyApp/Views/Home/Login.cshtml
@@ -7,10 +7,10 @@
 <div class="text-center">
  <form  action="/home/validate">
   <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email" value="" required><br>
+  <input type="email" id="email" name="em" value="" required><br>
   
   <label for="password">Password:</label><br>
-  <input type="password" id="password" name="password" ><br><br>
+  <input type="password" id="password" name="pd" ><br><br>
   
   <input type="submit" value="Submit">
 </form> 
