--- a/MyApp/Views/Home/Register.cshtml
+++ b/MyApp/Views/Home/Register.cshtml
@@ -5,7 +5,7 @@
 <h1>Login</h1>
 <hr/>
 <div class="text-center">
- <form  action="/home/validate">
+ <form  action="/home/NewUser">
 
  <label for="fn">First Name:</label><br>
   <input type="text" id="fn" name="fn" required><br>
@@ -20,7 +20,10 @@
   <input type="email" id="email" name="email" value="" required><br>
   
   <label for="password">Password:</label><br>
-  <input type="password" id="password" name="password" ><br><br>
+  <input type="password" id="pwd" name="pwd" ><br><br>
+
+  <label for="password">Confirm Password:</label><br>
+  <input type="password" id="cnfpwd" name="cnfpwd" ><br><br>
   
   <input type="submit" value="Submit">
 </form> 
